[package]
name = "autobk-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autobk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "24.0.0"
clap = { version = "4.5.0", features = ["derive"]}
config = "0.14.0"
